--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
 
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad at dolor eum eos dignissimos a molestiae porro. Tempora praesentium excepturi doloribus dolores voluptatum sint similique, inventore consectetur. In, magni voluptates.</p>
         </article>
 
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis omnis, sint delectus praesentium aperiam magnam id iusto adipisci maxime nesciunt exercitationem nobis quae quia unde corporis amet repudiandae ratione in?</p>
         </article>
     </main>
 </body>
