--- a/curso-js.html
+++ b/curso-js.html
@@ -12,20 +12,17 @@
         <header>
             <h1>Cursos Grátis</h1>
             <img src="./images/curso-em-video-cor.png" alt="Curso em Video">
-        </header>
-
-        <article>
-            <h2>Curso de HTML5 com CSS3</h2>
-            <img class="lado" src="./images/curso-html-css.png" alt="Curso HTML">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad at dolor eum eos dignissimos a molestiae porro. Tempora praesentium excepturi doloribus dolores voluptatum sint similique, inventore consectetur. In, magni voluptates.</p>
-            <p><a href="curso-html.html">Acesse o curso de HTML5 e CSS3</a></p>
-        </article>
+        </header>      
 
         <article>
             <h2>Curso de JavaScript</h2>
             <img class="lado" src="./images/curso-javascript.png" alt="Curso JavaScript">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis omnis, sint delectus praesentium aperiam magnam id iusto adipisci maxime nesciunt exercitationem nobis quae quia unde corporis amet repudiandae ratione in?</p>
-            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
+            <p><a href="">Acesse o curso de JavaScript</a></p>
+
+            <iframe class="ajuste" src="https://www.youtube.com/embed/Ptbk2af68e8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            <a href="index.html"><img src="./images/btn-back.png" alt="Voltar"></a>
         </article>
     </main>
 </body>
