--- a/curso-html.html
+++ b/curso-html.html
@@ -18,15 +18,14 @@
             <h2>Curso de HTML5 com CSS3</h2>
             <img class="lado" src="./images/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad at dolor eum eos dignissimos a molestiae porro. Tempora praesentium excepturi doloribus dolores voluptatum sint similique, inventore consectetur. In, magni voluptates.</p>
-            <p><a href="curso-html.html">Acesse o curso de HTML5 e CSS3</a></p>
+            <p><a href="">Acesse o curso de HTML5 e CSS3</a></p>
+
+            <iframe class="ajuste" src="https://www.youtube.com/embed/Ejkb_YpuHWs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            <a href="index.html"><img src="./images/btn-back.png" alt="Voltar"></a>
         </article>
 
-        <article>
-            <h2>Curso de JavaScript</h2>
-            <img class="lado" src="./images/curso-javascript.png" alt="Curso JavaScript">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis omnis, sint delectus praesentium aperiam magnam id iusto adipisci maxime nesciunt exercitationem nobis quae quia unde corporis amet repudiandae ratione in?</p>
-            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
-        </article>
+       
     </main>
 </body>
 </html>
