--- a/curso-js.html
+++ b/curso-js.html
@@ -20,7 +20,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis omnis, sint delectus praesentium aperiam magnam id iusto adipisci maxime nesciunt exercitationem nobis quae quia unde corporis amet repudiandae ratione in?</p>
             <p><a href="">Acesse o curso de JavaScript</a></p>
 
-            <iframe class="ajuste" src="https://www.youtube.com/embed/Ptbk2af68e8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="500px" height="315px" src="https://www.youtube.com/embed/Ptbk2af68e8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
             <a href="index.html"><img src="./images/btn-back.png" alt="Voltar"></a>
         </article>
