--- a/curso-html.html
+++ b/curso-html.html
@@ -20,7 +20,7 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad at dolor eum eos dignissimos a molestiae porro. Tempora praesentium excepturi doloribus dolores voluptatum sint similique, inventore consectetur. In, magni voluptates.</p>
             <p><a href="">Acesse o curso de HTML5 e CSS3</a></p>
 
-            <iframe class="ajuste" src="https://www.youtube.com/embed/Ejkb_YpuHWs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe  width="500px" height="315px" src="https://www.youtube.com/embed/Ejkb_YpuHWs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
             <a href="index.html"><img src="./images/btn-back.png" alt="Voltar"></a>
         </article>
